.scratch/evidence/melange_oxcaml_probe/_generated/local_binding.ml.ocaml.out
File "/home/ribelo/projects/ribelo/ocaml/Eta/scratch/evidence/melange_oxcaml_probe/_generated/local_binding.ml", line 2, characters 8-9:
2 |   let y @ local = x + 1 in
            ^
Error: Syntax error
